@@ -2,6 +2,8 @@ Revision history for Perl module Net::Mosso::CloudFiles:
 
 0.40
     - Major rewrite to be more like Net::Amazon::S3
+    - Use new JSON request for listing objects - adding size, etag,
+      content_type and last_modified
 
 0.35 Mon Feb  2 06:10:06 GMT 2009
     - Reauthenticate when the authentication token expires
